@@ -36,8 +36,8 @@ body
 <input class="hide" type="button" value="SheetSave" onclick="alert(spreadsheet.CreateSheetSave());" class="smaller">
 <input class="hide" type="button" value="Attribs" onclick="doattribs();" class="smaller">
 <input class="hide" type="button" value="New Copy" onclick="newcopy();" class="smaller">
-<input type="button" value="Sum" onclick="dosum();" class="smaller">
-<input type="button" value="Sum2" onclick="dosum2();" class="smaller">
+<input class="hide" type="button" value="Sum" onclick="dosum();" class="smaller">
+<input class="hide" type="button" value="Sum2" onclick="dosum2();" class="smaller">
 <textarea id="savestr" style="display:none;"></textarea>
 <input type="hidden" name="newstr" id="newdata" value="">
 <input type="hidden" name="pagename" value="$pagename">
