@@ -567,6 +567,12 @@ Fixed bug in SocialCalc.RecalcCheckCell where sheetref wasn't reset if range ite
 2009-06-21:
 Fixed: Audit tab doesn't escape <>, etc.
 
+2009-06-28:
+Fixed bug with text-custom not working (conversion from Perl...)
+
+2009-07-15:
+Fixed INDEX function not handling references on another sheet.
+
 
 TO DO:
 
